--- a/Информационная_база/src/DataProcessors/ОбработкаЗаказов/Forms/Форма/Form.form
+++ b/Информационная_база/src/DataProcessors/ОбработкаЗаказов/Forms/Форма/Form.form
@@ -11,6 +11,14 @@
     <horizontalAlign>Left</horizontalAlign>
     <autoFill>true</autoFill>
   </autoCommandBar>
+  <handlers>
+    <event>OnOpen</event>
+    <name>ПриОткрытии</name>
+  </handlers>
+  <handlers>
+    <event>OnCreateAtServer</event>
+    <name>ПриСозданииНаСервере</name>
+  </handlers>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
   <autoUrl>true</autoUrl>
